# home-assistant

./: .codespell  .flake8  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  NOTICE.md  README.md  README.rst  __init__.py  config_flow.py  const.py  cover.py  errors.py  gateway.py  hacs.json  info.md  light.py  manifest.json  om_cloud.py  openmotics.py  openmotics_api.md  openmoticssdk.py  pyproject.toml  requirements_test.txt  scene.py  setup.cfg  strings.json  switch.py  util.py
.github/: labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: linting.yaml  manage-labels.yml  publish-release.yml
custom_components/openmotics/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  diagnostic.py  entity.py  light.py  manifest.json  oauth_impl.py  scene.py  sensor.py  strings.json  switch.py
custom_components/openmotics/translations/: en.json
light/: openmotics.py
openmotics/: README.md  __init__.py  light.py  switch.py
scene/: openmotics.py
switch/: openmotics.py
tests/: README.md  __init__.py  conftest.py  const.py  test_init.py  test_openmoticscloud.py
tests/fixtures/: login_responce.json
